fix spacing on security code

--- a/support-frontend/assets/pages/contributions-landing/components/StripeCardForm/stripeCardForm.scss
+++ b/support-frontend/assets/pages/contributions-landing/components/StripeCardForm/stripeCardForm.scss
@@ -102,7 +102,7 @@
   height: 14px;
   background: gu-colour(neutral-60);
   font-weight: 700;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
   color: gu-colour(neutral-100);
   text-align: center;
   border-radius: 50%;
